Fix alignment of input-text in the navigation bar and toggle text color when active

--- a/wp-content/themes/after-dark/assets/sass/_helpers.scss
+++ b/wp-content/themes/after-dark/assets/sass/_helpers.scss
@@ -61,6 +61,7 @@
 
   &::placeholder {
     color: $color-secondary;
+    transition: $navigation-search-animation;
   }
 
   &:active,
@@ -68,7 +69,7 @@
     outline: none;
 
     &::placeholder {
-      color: $color-secondary;
+      color: $color-foreground;
       transition: $navigation-search-animation;
     }
   }
