--- a/wp-content/themes/after-dark/assets/sass/_navigation.scss
+++ b/wp-content/themes/after-dark/assets/sass/_navigation.scss
@@ -255,7 +255,7 @@
       width: 100%;
       font-size: $default-heading-size;
       position: relative;
-      top: -3px;
+      top: -2px;
       transition: $navigation-search-animation;
 
       &::placeholder {
